--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @artist.name %></h1>
+
+<%= link_to "New Song", new_artist_song_path(@artist) %>
+
+
+<h3>Songs:</h3>
 <ul>
   <% @artist.songs.each do |song| %>
     <li><%= link_to song.title, artist_song_path(@artist, song) %></li>
